# Chatting_APP

./: .gitignore  Chatting_App.sln  Chatting_App.vcxproj  Chatting_App.vcxproj.filters  client_session.cpp  client_session.h  ser_def.h
Client/: Client.filters  Client.vcxproj  Client.vcxproj.filters
Comm_lib/: Comm_lib.vcxproj  Comm_lib.vcxproj.filters  def.h
QtClient/: CMakeLists.txt  QtClient.pro  chatwindow.cpp  chatwindow.h  main.cpp  protocol.h
Server/: Server.vcxproj  Server.vcxproj.filters  server_session.cpp  server_session.h
dev/client/include/: client_session.h
dev/client/src/: client_session.cpp  main.cpp
dev/comm/include/: def.h  error.h  packet.h  socket_utils.h  validation.h
dev/server/include/: server_session.h  storage_repository.h
dev/server/src/: main.cpp  server_session.cpp  storage_repository.cpp
project/Client/: Client.vcxproj  Client.vcxproj.filters
project/Comm_lib/: Comm_lib.vcxproj  Comm_lib.vcxproj.filters
project/QtClient/: CMakeLists.txt  QtClient.pro  QtClient.vcxproj  QtClient.vcxproj.filters  chatwindow.cpp  chatwindow.h  chatwindow.ui  protocol.h
project/Server/: Server.vcxproj  Server.vcxproj.filters
